Fix imported global vars not being marked as used